Misc cleanup, fix enrollment trend, fix game level feedback alignment

--- a/projects/gameboard-ui/src/styles.scss
+++ b/projects/gameboard-ui/src/styles.scss
@@ -167,6 +167,18 @@ app-root {
   color: lighten($danger, 20%);
 }
 
+.countdown-green {
+  color: $success !important;
+}
+
+.countdown-yellow {
+  color: $warning !important;
+}
+
+.countdown-red {
+  color: $danger !important;
+}
+
 fa-icon + span {
   margin-left: 4px;
 }
